// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нормально отрендериться 1`] = `
<div
  className="CardGroupComplectationTechSummary"
>
  <div
    className="CardGroupComplectationTechSummary__column"
  >
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      6 цветов
    </div>
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      2.4 л / 181 л.с. / Дизель
    </div>
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      Механическая
    </div>
  </div>
  <div
    className="CardGroupComplectationTechSummary__column"
  >
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      от 41 опции
    </div>
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      Полный
    </div>
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      Внедорожник 5 дв.
    </div>
  </div>
</div>
`;

exports[`должен нормально отрендериться, если нет цветов 1`] = `
<div
  className="CardGroupComplectationTechSummary"
>
  <div
    className="CardGroupComplectationTechSummary__column"
  >
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      1.6 л / 87 л.с. / Бензин
    </div>
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      Автоматическая
    </div>
  </div>
  <div
    className="CardGroupComplectationTechSummary__column"
  >
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      от 22 опций
    </div>
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      Передний
    </div>
    <div
      className="CardGroupComplectationTechSummary__cell"
    >
      Хэтчбек 5 дв.
    </div>
  </div>
</div>
`;
